Creacion de formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,9 +23,21 @@
         </nav>
     </header>
     <main>
-      <form action="/submit" method="post">
-
-      </form>  
+        <form action="" method="post">
+         <label for="Nombre"></label>
+         <input type="text" name="Nombre" id="Nombre"> 
+         <label for="Celular"></label>
+         <input type="number" number="Celular" id="Celular">
+         <label for="mail"></label>
+         <input type="text" name="Mail" id="Mail">
+         <label for="mensaje"></label>
+         <textarea name="mensaje" id="mensaje"></textarea>
+        </form>
     </main>
-</body>
+     <footer>
+            <img src="./assets/logoinstagram.jpg" alt=""> <a href="https://www.instagram.com/rdrarquitectos" target="_blank">
+            <img src="./assets/linkedin.png" alt="">
+            <img src="./assets/logowhatsapp.jpg" alt="">
+        </footer>
+</body> 
 </html>
