Se agrego enlace de wireframe

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,17 +13,17 @@
     <header>
         <img src="../assets/logo.jpeg" alt="logoestudioarq">
         <nav>
-            <ul>
-                <li> <a href="./index.html">home</a></li>
-                <li> <a href="./pages/nuestro-estudio.html">nuestro estudio</a></li>
-                <li> <a href="./pages/especialidades.html">servicios</a></li>
-                <li> <a href="./pages/obras.html">portfolio</a></li>
-                <li> <a href="./pages/contacto.html">contacto</a></li>
+            <ul class="nav-bar">
+                <li> <a href="../index.html">home</a></li>
+                <li> <a href="./nuestro-estudio.html">nuestro estudio</a></li>
+                <li> <a href="./especialidades.html">servicios</a></li>
+                <li> <a href="./obras.html">portfolio</a></li>
+                <li> <a href="./contacto.html">contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <form action="" method="post">
+        <form action="submit" method="post">
          <label for="Nombre"></label>
          <input type="text" name="Nombre" id="Nombre"> 
          <label for="Celular"></label>
@@ -36,8 +36,7 @@
     </main>
      <footer>
             <img src="./assets/logoinstagram.jpg" alt=""> <a href="https://www.instagram.com/rdrarquitectos" target="_blank">
-            <img src="./assets/linkedin.png" alt="">
-            <img src="./assets/logowhatsapp.jpg" alt="">
+            <img src="../assets/logowhatsapp.jpg" alt=""> <a href="https://whatsapp.com/" target="_blank"></a>
         </footer>
 </body> 
 </html>
