--- a/pages/obras.html
+++ b/pages/obras.html
@@ -13,11 +13,11 @@
     <header>
         <img src="../assets/logo.jpeg" alt="logoestudioarq">
         <nav>
-            <ul>
+            <ul class="nav-bar">
                 <li> <a href="../index.html">home</a></li>
                 <li> <a href="./nuestro-estudio.html">nuestro estudio</a></li>
-                <li> <a href="./servicios.html">servicios</a></li>
-                <li> <a href="./Obras.html">portfolio</a></li>
+                <li> <a href="./especialidades.html">servicios</a></li>
+                <li> <a href="./obras.html">portfolio</a></li>
                 <li> <a href="./contacto.html">contacto</a></li>
             </ul>
         </nav>
@@ -35,8 +35,7 @@
     </main>
     <footer>
         <img src="../assets/logoinstagram.jpg" alt=""> <a href="https://www.instagram.com/rdrarquitectos" target="_blank">
-        <img src="../assets/linkedin.png" alt="">
-        <img src="../assets/logowhatsapp.jpg" alt="">
+        <img src="../assets/logowhatsapp.jpg" alt=""> <a href="https://whatsapp.com/" target="_blank"></a>
     </footer>
 </body>
 </html>
