--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rdrarquitectos</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <img src="./assets/logo.jpeg" alt="logoestudioarq">
         <nav>
-            <ul>
+            <ul class="nav-bar">
                 <li> <a href="./index.html">home</a></li>
                 <li> <a href="./pages/nuestro-estudio.html">nuestro estudio</a></li>
                 <li> <a href="./pages/especialidades.html">servicios</a></li>
@@ -25,12 +25,12 @@
     <main>
         <section>
                 <img src="" alt="">fotodearquitectos</div>
+                <h1>Nuestro equipo</h1>
                 <p> Somos un equipo de arquitectos apasionados por el diseño, los procesos y los detalles.</p>
         </section>
     </main>
         <footer>
             <img src="./assets/logoinstagram.jpg" alt=""> <a href="https://www.instagram.com/rdrarquitectos" target="_blank">
-            <img src="./assets/linkedin.png" alt="">
-            <img src="./assets/logowhatsapp.jpg" alt="">
+            <img src="../assets/logowhatsapp.jpg" alt=""> <a href="https://whatsapp.com/" target="_blank"></a>
         </footer>
 </body>
