--- a/pages/nuestro-estudio.html
+++ b/pages/nuestro-estudio.html
@@ -13,12 +13,12 @@
     <header>
         <img src="../assets/logo.jpeg" alt="logoestudioarq">
         <nav>
-            <ul>
-                <li> <a href="./index.html">home</a></li>
-                <li> <a href="./pages/nuestro-estudio.html">nuestro estudio</a></li>
-                <li> <a href="./pages/especialidades.html">servicios</a></li>
-                <li> <a href="./pages/obras.html">portfolio</a></li>
-                <li> <a href="./pages/contacto.html">contacto</a></li>
+            <ul class="nav-bar">
+                <li> <a href="../index.html">home</a></li>
+                <li> <a href="./nuestro-estudio.html">nuestro estudio</a></li>
+                <li> <a href="./especialidades.html">servicios</a></li>
+                <li> <a href="./obras.html">portfolio</a></li>
+                <li> <a href="./contacto.html">contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -30,13 +30,9 @@
     </section> 
     <footer>
         <img src="../assets/logoinstagram.jpg" alt=""> <a href="https://www.instagram.com/rdrarquitectos" target="_blank">
-        <img src="../assets/linkedin.png" alt="">
-        <img src="../assets/logowhatsapp.jpg" alt="">
+        <img src="../assets/logowhatsapp.jpg" alt=""> <a href="https://whatsapp.com/" target="_blank"></a>
     </footer>  
 </body>
-
-
-
 
 
 
